--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 Perlin noise yeehaw
+wtf
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kkysGp1wznY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
