--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 Endless perlin noise
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kkysGp1wznY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+SLAM + 3D Eye tracking + Motion capture Visualization
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TzrA_iEtj1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+Foothold locations projected into image space
+<iframe width="560" height="315" src="https://www.youtube.com/embed/llulrzhIAVg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
