added link to publications

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <meta http-equiv='expires' content='0'> 
 <meta http-equiv='pragma' content='no-cache'>
 
+<a href="pages/publications.html"> Publications</a>
+<br>
 Endless perlin noise
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kkysGp1wznY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
