--- a/pages/publications.html
+++ b/pages/publications.html
@@ -1,3 +1,3 @@
-<a href="index.html"> Home Page</a>
+<a href="../index.html"> Home Page</a>
 <br>
 <b>Muller, K.</b>., Panfili, D., Matthis, J., & Hayhoe, M. (2021). Foothold selection during locomotion over rocky terrain. <a href="https://jov.arvojournals.org/article.aspx?articleid=2777629"> Journal of Vision </a>, 18(10), 1059-1059. 
